master - pre-configured EVM removed; evm routes based on https://chainlist.org/rpcs.json; manual parser has been added; proprietary tatum and alchemy removed from pre-configuration
